# zakupki_gov_parser

./: README.md  pyproject.toml  requirements.txt
resources/: spark_top50k.csv
src/: __main__.py
src/zakupki_gov_ru_parser/: consts.py  create_app.py  models.py  parser.py  settings.py  utils.py
