[tool.poetry]
name = "zakupki-gov-ru-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pandas = "^1.5.2"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
